--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,1 +1,70 @@
-needs to be completed.
+
+<div class="container">
+	<div class="top-line">
+		<h3>Burgers!</h3>
+	</div>
+	<div class="row justify-content-start">
+    <div class="col-4">
+    </div>
+    <div class="col-4">
+    </div>
+  </div>
+
+	<div class="row justify-content-between">
+	
+		<div class="col-4">
+		</div>
+	
+		<div class="col-4">
+			<img src="/assets/images/burger_clipart.jpg"> 
+		</div>
+		
+		<div class="col-4">
+		</div>
+		
+	</div>
+	
+    <div class="row justify-content-between">
+    
+		<div class="col">
+			<ul>
+			    {{#each burgers}}
+							{{#unless this.devoured}} 
+		            <li> 
+									{{this.burger_name}}
+										<form action='burgers/updateOne/{{this.id}}?_method=PUT' method='POST'>
+											<input type='hidden' name='devoured' value='true'>
+											<button type='submit' class="btn btn-default">Eat da Burger!</button>
+										</form>
+								</li>
+							{{/unless}}
+			    {{/each}} 
+			</ul>
+		</div>
+		
+		<div class="col-4">
+		</div>
+		
+		<div class="col">
+			<ul>
+			   {{#each burgers}}
+						{{#if this.devoured}} 
+		           <li> 
+								{{this.burger_name}}									
+							</li>
+						{{/if}}
+			   {{/each}}
+			</ul>
+		</div>
+    </div>
+    
+	<h4>Add a Burger</h4>
+		<form class="create-form" action="burgers/insertOne" method="POST">
+		  <div class="form-group">
+				<label for="bger">Burger Name:</label>
+				<input type="text" id="bger" name="name">
+				<button type="submit">Add Your Burger</button>		
+      </div>
+		</form>
+</div>
+
